adding box-shadow to the button

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ img {
   width: 200px;
   border-radius: 20px;
   cursor: pointer;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
 }
 .footer {
   display: flex;
